Added numbers.html, made improvements to /number such as not accepting letters anymore and redirecting back to the /number using get method so it can be used again. there is a slight problem as when it is redirected, it has a question mark at the end of the url

--- a/templates/numbers.html
+++ b/templates/numbers.html
@@ -5,6 +5,9 @@
     <title>Ashiro's Numbers</title>
   </head>
   <body>
+    {% if wrong %}
+      <p><strong>Please enter NUMBERS ONLY</strong></p>
+    {% endif %}
     <form action="/numbers" method="post">
       <p><label><strong>First Number:</strong></label><br>
       <input type="text" name="num1"></p>
