Added favicon.io it's a cute little jumping rabbit

--- a/templates/numbersResult.html
+++ b/templates/numbersResult.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ashiro's Numbers</title>
+    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}">
   </head>
   <body>
     <form action="{{ url_for('numbers') }}", method="get">
