--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Ashiro's Site</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}">
   </head>
   <body>
     <h1>Welcome to Ashiro's Site</h1>
