--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Ashiro's Site</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}">
   </head>
   <body>
     {% if username %}
