--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,12 @@
-h1 {
-  color: skyblue;
+a {
+  padding: 8px 15px;
+  background: white;
+  color: #000;
+  border-style: solid;
+  text-decoration:none;
+}
+
+a:hover {
+  color:lightblue;
+  text-decoration:none;
 }
