Added a index page with all the url on it, the new /form is the old index page, favicon on index problem fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <h1>Welcome to Ashiro's Site</h1>
+    <h2>Here is a list of urls you can access</h2>
+    <ul>
+      <li><p><a href={{ url_for('form') }}>Form</a></p></li>
+      <li><p><a href={{ url_for('show_user_profile') }}>User</a></p></li>
+      <li><p><a href={{ url_for('numbers') }}>Numbers</a></p></li>
+      <li><p><a href={{ url_for('show_post') }}>Post</a></p></li>
+      <li><p><a href={{ url_for('show_blog') }}>Blog</a></p></li>
+      <li><p><a href={{ url_for('chat') }}>Chat</a> Still in develop</p></li>
+    </ul>
   </body>
 </html>
