--- a/templates/formResult.html
+++ b/templates/formResult.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Ashiro's Site</title>
+    <link rel="shortcut icon" href="{{ url_for('static',filename='favicon.ico') }}">
   </head>
   <body>
     <h1>{{ title }}</h1>
