--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
       <li><p><a href={{ url_for('show_post') }}>Post</a></p></li>
       <li><p><a href={{ url_for('show_blog') }}>Blog</a></p></li>
       <li><p><a href={{ url_for('chat') }}>Chat</a> Still in develop</p></li>
+      <li><p><a href={{ url_for('upload_file') }}>Upload File</a></p></li>
     </ul>
   </body>
 </html>
