--- a/Ex01/templates/result.html
+++ b/Ex01/templates/result.html
@@ -1,5 +1,5 @@
 <h1>Hello {{ name }}</h1>
 <h2>You have booked it on {{ date }}</h2>
-<p>Here is your special requirements</p>
+<p>Here is your special requirements:</p>
 <br>
 <p>{{ text }}</p>
