--- a/Ex02/templates/forms.html
+++ b/Ex02/templates/forms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" /> 
+    <meta charset="UTF-8" />
     <title>
         HTML Forms
     </title>
@@ -14,28 +14,51 @@
 <h1>
     HTML Forms
 </h1>
-<form id="f1" action="" method="post">
+<form id="f1" action="/" method="post">
     <p> Text: <input type="text" name="text1" autofocus  required /> </p>
     <p> Password: <input type="password" name="password1" /> </p>
-    <p> Checkboxes: </p>
-    <p> Red: <input type="checkbox" name="red" /> &nbsp;
-        Blue: <input type="checkbox" name="blue" checked /> &nbsp;
-        Green: <input type="checkbox" name="green" /> 
-    </p>
-    <p> Radio buttons: </p>
-    <p> Tall: <input type="radio" name="size" value="tall" /> &nbsp;
-        Grande: <input type="radio" name="size" value="grande" /> &nbsp;
-        Venti: <input type="radio" name="size" value="venti" checked /> 
-    </p>
+      <p> Checkboxes: </p>
+      <p> Red: <input type="checkbox" name="red" checked /> &nbsp;
+          Blue: <input type="checkbox" name="blue" /> &nbsp;
+          Green: <input type="checkbox" name="green" />
+      </p>
+      <p> Radio buttons: </p>
+      <p> Tall: <input type="radio" name="size" value="tall" /> &nbsp;
+          Grande: <input type="radio" name="size" value="grande" /> &nbsp;
+          Venti: <input type="radio" name="size" value="venti" checked />
+      </p>
     <!--<p> <input type="submit" name="submit1" value="Big Red Button" onclick="return display()" /> </p>-->
     <p> <input type="submit" name="submit1" value="Submit Information" /> </p>
 </form>
 
 </div> <!-- form -->
 
-<div id="results">
-    <p> Results go here. </p>
-</div> <!-- results -->
+{% if method == "POST" %}
+  <div id="results">
+    <p>Your text is: {{ text1 }}</p>
+    <p>Your password is: {{ password1 }}</p>
+    <p>
+      {% if dic["red"] == "on" %}
+        You have selected red
+      {% else %}
+        You have not selected red
+      {% endif %}
+      <br>
+      {% if dic["blue"] == "on" %}
+        You have selected blue
+      {% else %}
+          You have not selected blue
+      {% endif %}
+      <br>
+      {% if dic["green"] == "on" %}
+        You have selected green
+      {% else %}
+        You have not selected green
+      {% endif %}
+    </p>
+    <p>Your choice was: {{ choice }}</p>
+  </div> <!-- results -->
+{% endif %}
 </div> <!-- outer -->
 
 </body>
